fix: scrollbars on linux mostly match macos and don't bug out measuring code

--- a/src/logView.css
+++ b/src/logView.css
@@ -20,6 +20,10 @@
   display: none;
 }
 
+.linux-platform .log-view-scroller::-webkit-scrollbar {
+  display: none;
+}
+
 .fullscreen-element {
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
